--- a/src/Pages/Bienvenida.css
+++ b/src/Pages/Bienvenida.css
@@ -13,25 +13,25 @@
   height: 100%;
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: end;
   justify-content: center;
 }
 
 .bienvenida-content {
-  text-align: center;
+  text-align: end;
   color: #fff;
-  max-width: 600px;
+  max-width: 700px;
   padding: 2rem;
   animation: fadeIn 1s ease-in-out;
 }
 
 .bienvenida-titulo {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   margin-bottom: 1rem;
 }
 
 .bienvenida-texto {
-  font-size: 1.2rem;
+  font-size: 2.2rem;
   margin-bottom: 2rem;
   opacity: 0.9;
 }
@@ -39,7 +39,7 @@
 .bienvenida-botones {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 .btn-primario,
@@ -47,28 +47,29 @@
   text-decoration: none;
   padding: 0.8rem 1.5rem;
   border-radius: 8px;
-  font-weight: 600;
+  font-weight: 700;
   transition: background 0.3s, transform 0.2s;
 }
 
 .btn-primario {
-  background: #00b4d8;
+  background:transparent;
+  border: 1px solid #fff;
   color: #fff;
 }
 
 .btn-primario:hover {
-  background: #0096c7;
+  background: hsla(195, 100%, 39%, 0.65);
   transform: scale(1.05);
 }
 
 .btn-secundario {
   background: transparent;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   color: #fff;
 }
 
 .btn-secundario:hover {
-  background: #fff;
+  background: hsla(0, 0%, 100%, 0.65);
   color: #000;
   transform: scale(1.05);
 }
