--- a/src/components/hero/VideoHero.css
+++ b/src/components/hero/VideoHero.css
@@ -1,4 +1,4 @@
-.hero-video {
+/* .hero-video {
     width: 100%;
   height: 100vh;
   object-fit: cover;
@@ -10,4 +10,62 @@
         margin-top: 19vh;
         height: 70vh;
     }
+} */
+.hero-iframe-container {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  
+}
+
+.hero-iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 120vw;
+  height: 120vh;
+  transform: translate(-50%, -50%);
+  filter: blur(14px);
+  pointer-events: none;
+  border: none;
+}
+
+
+/* WRAPPER QUE CONTIENE EL IFRAME */
+.video-bg-wrapper-hero {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 120%;
+  height: 120%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+/* VIDEO */
+.video-bg-wrapper-hero iframe {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: none;
+}
+
+@media (max-width: 768px) {
+  .hero-iframe-container{
+    margin-top: 180px;
+    height: 75vh;
+  }
+ 
+    .video-bg-wrapper-hero {
+    width: 300%;
+    height: 250%;
+
+  }
+  .video-bg-wrapper-hero iframe {
+    width: 100%;
+  }
+
 }
