--- a/src/Pages/Bienvenida.css
+++ b/src/Pages/Bienvenida.css
@@ -9,7 +9,7 @@
 }
 
 .bienvenida-overlay {
-  background: rgba(0, 0, 0, 0.6);
+
   height: 100%;
   width: 100%;
   display: flex;
@@ -18,7 +18,7 @@
 }
 
 .bienvenida-content {
-  text-align: end;
+  text-align: center;
   color: #fff;
   max-width: 700px;
   padding: 2rem;
@@ -77,4 +77,9 @@
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
   to { opacity: 1; transform: translateY(0); }
+}
+@media (max-width: 768px){
+.bienvenida-overlay{
+  align-items: center;
+}
 }
